--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         </nav>
     </header>
 
+    <section id="showcase">
+        <div class="showcase__content">
+            <h1 class="showcase__content--title">Scarlett Tyler</h1>
+            <p class="showcase__content--para">
+                UX Designer / Frontend Developer
+            </p>
+            <a href="#" class="showcase__content--link">My Work</a>
+        </div>
+    </section>
+
 </main>
 </body>
 <script src="app.js"></script>
